k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: k8s-chatapp 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        name: backend-pod
        namespace: k8s-chatapp
    spec:
      containers:
        - name: backend-chatapp
          image: swapnilmali101/chatapp-backend:latest
          ports:
            - containerPort: 5001
