k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  backend
  namespace: k8s-chatapp
spec:
  selector:
    app: backend
  ports:
    - port: 5001  # service port
      targetPort: 5001 # container port
  type: ClusterIP
