k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  frontend
  namespace: k8s-chatapp
spec:
  selector:
    app: frontend
  ports:
  - port: 80  # service port
    targetPort: 80  # container port
  type: ClusterIP
